<resources>
    <string name="app_name">TvShowManager</string>
    <string name="release_date_text">Release Date : </string>
    <string name="season_label">Seasons : </string>
    <string name="save_tv_show">Save Tv Show</string>
    <string name="seasons">Seasons</string>
    <string name="release_date">Release Date</string>
    <string name="tv_show">Tv Show</string>
    <string name="connectivity_message">Please check your internet connection.</string>
    <string name="add_new_tv_show">Add New Tv Show</string>
    <string name="show_list_of_added_show">Show List of Added Shows</string>
    <string name="error_message_show_blank">TvShow cannot be Blank.</string>
    <string name="error_message_release_date_blank">Release date Cannot be blank.</string>
    <string name="error_message_season_blank">Season cannot be blank.</string>
    <string name="show_created_successfully">Show Created Successfully</string>
    <string name="date_is_not_provided">Date is not provided</string>
</resources>